--- a/frontend/src/components/ActivePlayers/ActivePlayers.module.css
+++ b/frontend/src/components/ActivePlayers/ActivePlayers.module.css
@@ -1,5 +1,16 @@
 .playersContainer {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   gap: 8px;
+}
+
+.playerContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 8px;
+  border-radius: 4px;
+  width: 150px;
+  background-color: var(--color-background-main);
 }
