--- a/frontend/src/components/Card/Card.module.css
+++ b/frontend/src/components/Card/Card.module.css
@@ -15,7 +15,8 @@
 }
 
 .gamesList,
-.addAGame {
+.addAGame,
+.addAPlayer {
     background-color: var(--color-surface);
     color: var(--color-text-main);
 }
@@ -25,4 +26,12 @@
     color: var(--color-primary-text);
     flex : 1;
 
+}
+
+.addAGame,
+.addAPlayer {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
 }
