--- a/frontend/src/components/GamePlayersCheckboxes/gamePlayersCheckboxes.module.css
+++ b/frontend/src/components/GamePlayersCheckboxes/gamePlayersCheckboxes.module.css
@@ -12,12 +12,12 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #222;
-  border: 1px solid #ccc;
+  background-color: var(--color-background-main);
+  color: var(--color-primary-text);
   border-radius: 10px;
   padding: 1rem;
   z-index: 10;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: var( --box-shadow-default), var(--box-shadow-inner);
   min-width: 250px;
 }
 
