--- a/frontend/src/components/AddPlayerForm/AddPlayerForm.module.css
+++ b/frontend/src/components/AddPlayerForm/AddPlayerForm.module.css
@@ -1,6 +1,44 @@
 .form {
   display: flex;
   flex-direction: column;
+  flex:1;
   gap: 1rem;
-  flex: 1;
+  width: 100%;
+}
+
+.title {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: var(--color-text-main);
+  margin-bottom: 0.5rem;
+}
+
+.input {
+  padding: 0.75rem 1rem;
+  font-size: 1rem;
+  border: 1px solid var(--color-border);
+  border-radius: var(--radius-sm);
+  outline: none;
+  transition: border-color 0.2s ease;
+  background-color: #fff;
+  color: var(--color-text-main);
+}
+
+.input:focus {
+  border-color: var(--color-primary);
+  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.2);
+}
+
+.button {
+  color: var(--color-primary-text);
+  border: none;
+  padding: 0.75rem 1rem;
+  border-radius: var(--radius-sm);
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.button:hover {
+  background-color: var(--color-primary-hover);
 }
