--- a/frontend/src/components/GamePlayersCheckboxes/gamePlayersCheckboxes.module.css
+++ b/frontend/src/components/GamePlayersCheckboxes/gamePlayersCheckboxes.module.css
@@ -30,3 +30,21 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
+.input {
+  padding: 0.75rem 1rem;
+  border: 1px solid var(--color-border);
+  border-radius: var(--radius-md);
+  font-size: 16px; /* ✅ bloque le zoom iOS */
+  color: var(--color-text-main);
+  background-color: var(--color-surface);
+  transition: border 0.2s ease, box-shadow 0.2s ease;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.input:focus {
+  border-color: var(--color-primary);
+  box-shadow: 0 0 0 2px rgba(108, 92, 231, 0.2);
+  outline: none;
+}
