--- a/frontend/src/components/Card/Card.module.css
+++ b/frontend/src/components/Card/Card.module.css
@@ -9,15 +9,18 @@
   color: var(--color-text-main);
   flex: 1;
   min-width: 0;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 /* Listes de jeux */
 .gamesList {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* ⚡️ responsive grille */
-  gap: 1rem;
+  display: grid; /* au lieu de flex */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 2rem;
   background-color: var(--color-surface);
   color: var(--color-text-main);
+  margin: 24px;
 }
 
 .filteredGameList {
@@ -45,5 +48,14 @@
   .addAGame,
   .addAPlayer {
     gap: 0.75rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .cardContainer {
+    margin: 0.5rem 0;
+    width: 100%;
+    padding: 0.75rem;
+    gap: 0.5rem;
   }
 }
