--- a/frontend/src/components/Buttons/Button.module.css
+++ b/frontend/src/components/Buttons/Button.module.css
@@ -1,15 +1,10 @@
 .button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-
   padding: 0.6rem 1.5rem;
   font-size: 1rem;
   font-weight: 600;
-  line-height: 1;
-
   border: none;
   border-radius: var(--radius-pill);
+  height: fit-content;
 
   cursor: pointer;
 
