--- a/frontend/src/components/Card/Card.module.css
+++ b/frontend/src/components/Card/Card.module.css
@@ -7,11 +7,10 @@
 
   box-shadow: var(--shadow-sm);
   padding: var(--card-padding);
-
-  flex: 1;
+  flex: 1 1 calc(50% - 2.5rem);
   min-width: 260px;
-  max-width: 100%;
   box-sizing: border-box;
+  max-height: 500px;
 
   transition:
     background-color 0.25s ease,
@@ -38,6 +37,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  height: fit-content;
 }
 
 .addAGame,
